Correction fautes ortographes + Clear Linux