@@ -7,7 +7,7 @@ public class Clear {
             if (System.getProperty("os.name").contains("Windows"))
                 new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             else
-                Runtime.getRuntime().exec("clear");
+                new ProcessBuilder("clear").inheritIO().start().waitFor();
         } catch (IOException | InterruptedException ex) {}
     }  
 }
